# password-manager

./: .gitignore  Cargo.toml
src/: database.rs  gui_handler.rs  main.rs
